[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "William Carlos",email = "william.carlos16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.121.1,<0.122.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
