[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "William Carlos",email = "william.carlos16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.121.1,<0.122.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.14.4,<0.15.0)"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'W', 'PL', 'PT']
ignore ['E402', 'F811']

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
pythonpath = "."